@@ -6,36 +6,59 @@ import org.springframework.web.util.UriComponentsBuilder;
 import ru.practicum.dto.EndpointHitDTO;
 import ru.practicum.dto.ViewStatsDTO;
 
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
 import java.util.List;
 
-public class StatsClient {
+public abstract class StatsClient {
     private final RestClient restClient;
     private final String serverUrl;
-    private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
-    public StatsClient(String serverUrl, RestClient restClient) {
-        this.restClient = restClient;
+    public StatsClient(String serverUrl) {
         this.serverUrl = serverUrl;
+        this.restClient = RestClient.builder()
+                .baseUrl(serverUrl)
+                .build();
     }
 
-    public void saveHit(EndpointHitDTO endpointHitDto) {
-        restClient.post()
-                .uri(serverUrl + "/hit")
-                .contentType(MediaType.APPLICATION_JSON)
-                .body(endpointHitDto)
-                .retrieve()
-                .toBodilessEntity();
+    public void saveHit(EndpointHitDTO endpointHitDTO) {
+        try {
+            restClient.post()
+                    .uri("/hit")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .body(endpointHitDTO)
+                    .retrieve()
+                    .toBodilessEntity();
+        } catch (Exception e) {
+            System.err.println("Failed to save hit: " + e.getMessage());
+        }
+    }
+
+    public void saveHits(List<EndpointHitDTO> hits) {
+        if (hits == null || hits.isEmpty()) {
+            return;
+        }
+
+        try {
+            restClient.post()
+                    .uri("/hit/batch")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .body(hits)
+                    .retrieve()
+                    .toBodilessEntity();
+        } catch (Exception e) {
+            for (EndpointHitDTO hit : hits) {
+                saveHit(hit);
+            }
+        }
     }
 
     public List<ViewStatsDTO> getStats(LocalDateTime start, LocalDateTime end, List<String> uris, Boolean unique) {
-        UriComponentsBuilder uriBuilder = UriComponentsBuilder.fromHttpUrl(serverUrl + "/stats")
-                .queryParam("start", encodeDateTime(start))
-                .queryParam("end", encodeDateTime(end))
+        validateDates(start, end);
+        UriComponentsBuilder uriBuilder = UriComponentsBuilder.fromHttpUrl("/stats")
+                .queryParam("start", DateTimeFormatter.ISO_LOCAL_DATE_TIME.format(start))
+                .queryParam("end", DateTimeFormatter.ISO_LOCAL_DATE_TIME.format(end))
                 .queryParam("unique", unique);
 
         if (uris != null && !uris.isEmpty()) {
@@ -49,10 +72,15 @@ public class StatsClient {
                 .retrieve()
                 .body(ViewStatsDTO[].class);
 
-        return Arrays.asList(response);
+        return response != null ? Arrays.asList(response) : List.of();
     }
 
-    private String encodeDateTime(LocalDateTime dateTime) {
-        return URLEncoder.encode(dateTime.format(FORMATTER), StandardCharsets.UTF_8);
+    private void validateDates(LocalDateTime start, LocalDateTime end) {
+        if (start == null || end == null) {
+            throw new IllegalArgumentException("Dates must not be null");
+        }
+        if (start.isAfter(end)) {
+            throw new IllegalArgumentException("Start date must be before end date");
+        }
     }
 }
